--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -37,8 +37,11 @@ html:focus-within {
 }
 
 /* Set core body defaults */
+html {
+  min-height: 100%;
+}
 body {
-  min-height: 100vh;
+  min-height: 100%;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
